--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-Utilities/Utilities/bin/
-Utilities/Utilities/obj/
+Utilities/bin/
+Utilities/obj/
 Utilities/packages/
 
-UtilitiesTest/UtilitiesTest/bin/
-UtilitiesTest/UtilitiesTest/obj/
+UtilitiesTest/bin/
+UtilitiesTest/obj/
 UtilitiesTest/packages/
